# Booth_Talk

./: .gitignore  FRONTEND_UPDATE_COMPLETE.md  IMPLEMENTATION_GUIDE.md  INTEGRATION_COMPLETE.md  NARU_README.md  README.md  RERUN_CODE_CDX.md  RERUN_CODE_GMI.md  error.md  main.py  package-lock.json  pyproject.toml
Mini-visWork/: Codex_CSS_Wild_Experiments.md  Codex_ChronoMorph_ClaudeGuide.md  Codex_ChronoMorph_Sample.html  Gemini_Advanced_CSS_Showcase.md
backend/: .env.example  add_unsplash_fields.py  backfill_unsplash_images.py  database.py  main.py  pyproject.toml  requirements.txt
backend/models/: __init__.py  admin.py  company.py  event.py  event_manager.py  exhibition.py  interaction.py  survey.py  tag.py  venue.py
backend/routes/: admin.py  auth.py  companies.py  events.py  events_visitor.py
backend/services/: auth_service.py  cleanup_service.py  email_service.py  event_report_service.py  llm_service.py  report_service.py  unsplash_service.py
database/: README_EXHIBITION_STRUCTURE.md  SCHEMA_CHANGES.md  build_seed.py  convert_expo_data.py  koea_crawler.py  schema.sql  seed.sql  setec_crawler.py  test_queries.sql
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  apiClient.ts
frontend/src/components/: AddManagerModal.css  AddManagerModal.jsx  FloatingButtons.css  FloatingButtons.jsx  Header.css  Header.jsx  MatrixInfinity.css  MatrixInfinity.jsx
frontend/src/context/: ThemeContext.jsx
frontend/src/styles/: EventExplorer.css  global.css
frontend/src/utils/: loadGoogleMaps.js  useIntersectionObserver.js
(+30 files in other folders)
